# oxide

./: .gitignore  README.md
client/: next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.json
client/.next/: build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  trace
client/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
client/.next/server/: _pages-dir-node_components_GalaxyScene_tsx.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  pages-manifest.json
client/.next/server/pages/: _app.js  _document.js  _error.js  index.js
client/.next/static/chunks/: webpack.js  (+2 more)
client/.next/types/: link.d.ts  routes.d.ts  validator.ts
client/components/: AsteroidBelt.tsx  GalaxyScene.tsx  OrbitRing.tsx  Planet.tsx  RepoInfo.tsx  Star.tsx
client/components/ui/: button.tsx  card.tsx  input.tsx  tooltip.tsx
client/hooks/: useGalaxyData.ts
client/pages/: _app.tsx  index.tsx
client/styles/: globals.css
client/utils/: api.ts  galaxyUtils.ts
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_add_open_issues.sql
server/src/: config.rs  error.rs  lib.rs  main.rs
server/src/api/: dto.rs  handlers.rs  routes.rs
server/src/db/: connection.rs  repositories.rs
server/src/galaxy/: generator.rs  layout.rs  mod.rs  orbit.rs
server/src/github/: client.rs  models.rs
server/src/services/: contributor_service.rs  galaxy_service.rs  mod.rs  repo_service.rs
server/src/worker/: ingestion.rs  mod.rs  scheduler.rs
(+79 files in other folders)
